# snapctrl

./: .bass-ready  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTROL.yaml  LICENSE  Makefile  README.md  SnapCTRL-linux.spec  SnapCTRL-macos.spec  SnapCTRL-windows.spec  SnapCTRL.spec  demo.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: claude_review.py
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  claude-review.yml
docs/: 00-VISION.md  01-REQUIREMENTS.md  02-ARCHITECTURE.md  03-DATA-MODELS.md  04-UI-UX.md  05-SECURITY.md  06-INFRASTRUCTURE.md  07-TESTING.md  08-WBS.md  09-DESIGN-SYSTEM.md  BUILDING.md
docs/ADR/: ADR-INDEX.md
docs/architecture/: ARC-001.context.md  ARC-INDEX.md
docs/requirements/: REQ-001.md  REQ-002.md  REQ-003.md  REQ-004.md  REQ-005.md  REQ-006.md  REQ-007.md  REQ-008.md  REQ-009.md  REQ-010.md  REQ-011.md  REQ-012.md  REQ-013.md  REQ-014.md  REQ-015.md  REQ-INDEX.md
docs/technology/: TECH-001.runtime.md  TECH-INDEX.md
macos/SnapCTRL.app/Contents/: Info.plist
performance_patches/: adaptive_debounce.py  batched_styles.py  differential_clients.py  system_tray_incremental.py
scripts/: build.py  build_icon.py  build_macos.sh
src/snapcast_mvp/: __init__.py  __main__.py
src/snapcast_mvp/ui/: theme.py  (+3 more)
src/snapctrl/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_album_art.py  test_api_client.py  test_api_protocol.py  test_client_card.py  test_controller.py  test_core_config.py  test_core_discovery.py  test_core_ping.py  test_core_state.py  test_core_worker.py  test_discovery.py  test_integration_snapcast.py  test_integration_week3.py  test_models_client.py  test_models_extended.py  test_models_group.py  test_models_profile.py  test_models_server.py  test_models_server_state.py  test_models_source.py  test_mpd_client.py  test_mpd_monitor.py  test_mpd_protocol.py  test_snapclient_binary.py  test_snapclient_manager.py  test_snapclient_manager_extended.py  test_system_tray_extended.py  test_tokens.py  test_ui_client_card.py  test_ui_dialogs.py  test_ui_groups_panel.py  test_ui_main_window.py  test_ui_panels.py  test_ui_preferences.py  test_ui_properties_panel.py  test_ui_sources_panel.py  test_ui_system_tray.py  test_ui_theme.py  (+3 more)
(+74 files in other folders)
