[project]
name = "snapcast-mvp"
version = "0.1.0"
description = "Native desktop controller for Snapcast multi-room audio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Claudio" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "PySide6>=6.8.0",
    "websockets>=14.0",
    "zeroconf>=0.131.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.3.0",
    "ruff>=0.7.0",
    "basedpyright>=1.21.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
snapcast-mvp = "snapcast_mvp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snapcast_mvp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["A", "ARG", "B", "C4", "E", "F", "I", "N", "PL", "PT", "RET", "SIM", "UP", "W"]
ignore = ["PLR0913", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ARG", "PLR2004", "B017", "PT011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: Tests that require network access to real Snapcast server",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "cairosvg>=2.8.2",
    "pillow>=12.1.0",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.18.0",
]
